--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,12 +1,12 @@
-name: Release
+name: Develop
 
 on:
   push:
     branches:
-      - 'release/*'
+      - 'develop'
   pull_request:
     branches:
-      - 'master'
+      - 'develop'
 
 jobs:
 
