--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,12 +1,9 @@
-name: Debug
+name: Master
 
 on:
   push:
     branches:
-      - 'develop'
-  pull_request:
-    branches:
-      - 'develop'
+      - 'master'
 
 jobs:
 
@@ -54,3 +51,13 @@ jobs:
         with:
           name: Assemble
           path: build/libs
+
+  publish:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Publish
+        run: ./gradlew publishPlugins
