Add test Android project

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,8 @@
+# @formatter:off
+
+# Todo: remove illegal-access option when possible
+org.gradle.jvmargs=--illegal-access=permit -XX:+IgnoreUnrecognizedVMOptions
+
 kotlin.code.style=official
+
+# @formatter:on
