Update GitHub Actions scripts

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -46,12 +46,12 @@ jobs:
         with:
           java-version: 14
       - name: Unit Test
-        run: ./gradlew test
+        run: ./gradlew :shrinkometer:test
       - uses: actions/upload-artifact@v2
         if: always()
         with:
           name: Unit Test
-          path: "build/reports/tests/"
+          path: "shrinkometer/build/reports/tests/"
 
   build:
     needs: [analysis, test]
@@ -68,10 +68,10 @@ jobs:
         with:
           java-version: 14
       - name: Assemble
-        run: ./gradlew assemble
+        run: ./gradlew :shrinkometer:assemble
       - uses: actions/upload-artifact@v2
         if: success()
         with:
           name: Assemble
-          path: "build/libs"
+          path: "shrinkometer/build/libs"
           if-no-files-found: error
