--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -45,10 +45,10 @@ jobs:
         with:
           java-version: 14
       - name: Unit Test
-        run: ./gradlew test
+        run: ./gradlew :shrinkometer:test
       - uses: actions/upload-artifact@v2
         if: always()
         with:
           name: Unit Test
-          path: "build/reports/tests/"
+          path: "shrinkometer/build/reports/tests/"
           if-no-files-found: error
